# asanitize

./: .gitignore  README.md  example.env.yml  logging_config.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: asanitize.yml  tests.yml
asanitize/: __main__.py  cli.py  command.py  command_line.py  command_line_interface.py  common.py  config.py  configuration_manager.py  gui.py  sqlite.py
asanitize/data_structure/: linked_list.py  stack.py
asanitize/data_structures/: linked_list.py  stack.py
asanitize/database/: sqlite.py
asanitize/services/: discord.py  reddit.py
asanitize/services/discord/: __init__.py  api.py  client.py  discord.py  exceptions.py  sanitize.py
asanitize/services/reddit/: reddit.py
asanitize/user_interface/: cli.py  gui.py
config/: logging_config.yaml  test.config.yml
configs/: logging.yaml
docs/: README.md  example.env.yml  specs.md
fixtures/: test.config.yml
sanitize/: __main__.py  cmd.py  command.py  command_test.py  common.py  common_test.py  errors.py  logger.py
sanitize/commands/: discord_command.py  reddit_command.py
sanitize/discord/: command.py
sanitize/plugins/discord/: api.py  channel.py  routines.py
sanitize/plugins/reddit/: routine.py
sanitize/reddit/: command.py  routine.py
sanitize/services/: discord.py  reddit.py
scripts/: setup.sh
source/: cmd.py  logger.py
source/plugins/: common.py
test/: test_common.py
testdata/: test_config.json
tests/: common_test.py  test_common.py  test_configuration_manager.py
tests/data_structures/: test_linked_list.py  test_stack.py
(+16 files in other folders)
