[tool.poetry]
name = "sanitize"
version = "0.1.0"
description = "A tool to sanitize your account"
authors = ["Brandon <26451183+gohanko@users.noreply.github.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
pyyaml = "^5.3.1"
cleo = "^0.8.1"
praw = "^7.1.0"
pytest = "^6.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
